--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,21 @@
-pom.xml*
-*jar
-/lib/
-/classes/
-.lein-*
-TAGS
-checkouts/*
-target/*
-.nrepl*
+/target
+/classes
+/checkouts
+*.jar
+*.class
+/.lein-*
+/.rebel_*
+/.nrepl-port
+.DS_Store
+.hgignore
+.hg/
+gh-pages
+.cpcache/
+/DELETE_ME
+/.dir-locals.el
+/.shadow-cljs/
+/todo.org
+/project.clj.bak
+/bin/test-cljs
+node_modules/
+/cljs-test-runner-out
