--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
       <version>1.10.1</version>
     </dependency>
     <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.8.0</version>
+    </dependency>
+    <dependency>
       <groupId>malabarba</groupId>
       <artifactId>lazy-map</artifactId>
       <version>1.3</version>
@@ -35,6 +40,11 @@
       <groupId>hiccup</groupId>
       <artifactId>hiccup</artifactId>
       <version>1.0.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.clojure</groupId>
+      <artifactId>data.csv</artifactId>
+      <version>1.0.0</version>
     </dependency>
     <dependency>
       <groupId>cheshire</groupId>
